<resources>
    <string name="app_name">Intents-Camera-Activities-Fragments</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_message">enter message</string>
    <string name="add_photo">Add Photo</string>
    <string name="image">Image</string>
    <string name="save">Save</string>
    <string name="edit_text_label">Edit text label</string>
    <string name="add_photo_frag">add_photo_frag</string>
</resources>
