<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPostFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/edit_text_label"
            android:fontFamily="casual"
            android:inputType="text"
            android:text="@string/enter_message"
            android:textStyle="bold"
            tools:text="enter text" />

        <Button
            android:id="@+id/BtnLoad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickLoadPhoto"
            android:text="@string/add_photo_frag" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:contentDescription="@string/image"
            android:src="@drawable/image" />


        <Button
            android:id="@+id/saveAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="saveAll"
            android:text="@string/save" />

    </LinearLayout>

</FrameLayout>